--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+    <link rel="stylesheet" type="text/css" href="path/to/react-notifications/dist/react-notifications.css">
+    <script src="path/to/react-notifications/dist/react-notifications.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
